style.css
:root{
    --background: #000000;
    --dark: #2c2e3a;
    --accent: #FCA311;
    --light: #E5E5E5;
    --text: #FFFFFF;
    --text-dark: #4b4c53;
}

@font-face
{
    font-family: Lato;
    src: url(./fonts/Lato/Lato-Regular.ttf);
    font-weight: 400;
}

@font-face
{
    font-family: Lato;
    src: url(./fonts/Lato/Lato-Bold.ttf);
    font-weight: 700;
}

@font-face
{
    font-family: Lato;
    src: url(./fonts/Lato/Lato-Light.ttf);
    font-weight: 300;
}


html
{
    scrollbar-color: dark;
    scrollbar-width: thin;
    scroll-behavior: smooth;
    overflow-x: hidden;
}

*
{
    box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

body
{
    background: linear-gradient(var(--background), var(--dark) 200%);
    color: var(--text);
    margin: 0;
    padding: 0;
    /*display: flex;
    flex-flow: nowrap;*/
    font-family: Lato, 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

#toPortfolio-mask
{
    display: none;
}

#construction
{
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: center;
    margin-top: 25vh;
    margin-bottom: 60vh;
    width: 100%;
}

#construction > img
{
    width: 200px;
    height: 200px;
    margin:20px;
}

a
{
    text-decoration: none;
    color: var(--text);
}

a.text
{
    color: var(--accent);
}

nav
{
    background: var(--background);
    position: fixed;
    width: 10rem;
    height: 100vh;
    left: 0;
    padding-top: 10px;
    padding-bottom: 10px;
    box-shadow: -5px 0 13px -1px var(--light);
}

nav > a
{
    display: flex;
    position: relative;
    margin-top: 3px;
    margin-bottom: 3px;
    width: 10rem;
    height: 32pt;
    font-size: 12pt;
    text-align: justify;
    font-weight: bold;
    align-items: center;
    justify-content: flex-start;
    padding-left: 12px;
}

nav > :not(:first-child)
{
    font-weight: 500;
    padding-left: 24px;
}

nav > a:hover
{
    background: var(--accent);
    transition: 200ms;
}

nav :last-child
{
    font-weight: bold;
    padding-left: 12px;
}

#folder
{
    display: none;
}

.main
{
    position: relative;
    /*left: 50%;
    transform: translateX(-25vw);*/
    margin-left: auto;
    margin-right: auto;
    width: 60vw;
    min-width: 550px;
}

h1
{
    font-size: 34pt;
    margin-top: 12pt;
    margin-bottom: 12pt;
}

h2
{
    font-size: 28pt;
    margin-top: 6pt;
    margin-bottom: 6pt;
}

h3
{
    color: var(--accent);
    margin-bottom: 3pt;
    margin-top: 3pt;
}

ul
{
    margin-top: 0
}

#social
{
    display: flex;
    flex-flow: row;
    align-content: space-between;
}

#social > *
{
    margin-right: 10px;
}

.icon
{
    height: 28pt;
    width: auto;
    transition: 200ms;
    filter: opacity(0.9);
    transform: scale3d(0.9,0.9,0.9);
}

.icon:hover
{
    transform: scale3d(1,1,1);
    filter: opacity(1);
    transition: 200ms;
}

section > *:not(:first-child)
{
    margin-left: 1rem;
    margin-bottom: 12pt;
}

section
{
    margin-bottom: 21pt;
}

.educ-card
{
    display: flex;
    flex-flow: column;
    width: 50vw;
    background: var(--dark);
    border-radius: 3px;
    padding: 8px;
}

.year
{
    position: absolute;
    right: 0;
    width: 50px;
    height: 50px;
    color: var(--dark);
    font-weight: bold;
    border-radius: 50%;
    border: 5px solid var(--dark);
    background: var(--accent);
    display: flex;
    align-items: center;
    justify-content: center;
    transform: translateY(-1.5rem);
}

.line
{
    z-index: -1;
    background: var(--accent);
    width: 5px;
    height: 225pt;
    position: absolute;
    right: 50%;
    transform: translate(50%, 50%);
}

.chevron
{
    /*position: absolute;*/
    height: 12pt;
    width: 12pt;
    content: url('./fonts/chevron-down-solid.svg');
    /*right: 1rem; this shouldnt be here*/
}

#skillset-container
{
    width: 100%;
    display: grid;
    grid-template-columns: auto auto auto;
    row-gap: 6pt;
    column-gap: 1rem;
    justify-items: center;
}

.badge-container
{
    display: flex;
    flex-flow: row;
    align-items: center;
    justify-content: center;
    margin: 0 2px;
    list-style-type: none;
    height: 2rem;
}

#toPortfolio
{
    display: none;
}

form
{
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-flow: column;
}

form > *
{
    margin-bottom: 6pt;
}

input, label, textarea
{
    display: block;
    width: 40vw;
}

input, textarea
{
    border: none;
    border-radius: 3px;
    background: var(--light);
    color: var(--background);
    resize: none;
}

input
{
    height: 18pt;
    padding: 3px 5px;
    font-size: 12pt;
}

input:focus, textarea:focus
{
    background: var(--text)
}

.footer
{
    margin: 12pt auto 6pt auto;
    width: 70vw;
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: center;
}

.footer *
{
    color: var(--text-dark) !important;
    text-align: center;
}

.quote-body
{
    display: flex;
    flex-flow: row nowrap;
    width: 100%;
    margin-bottom: 3pt;
}

.quote
{
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 6pt;
}

hr
{
    all: unset;
    border-top: 1px solid var(--text-dark);
    width: 70%;
    transform: translateY(50%);
}

.copyright
{
    margin-bottom: 6pt;
}

.attrib
{
    display: flex;
    justify-content: space-between;
    min-width: 10vw;
}

/* Portfolio specific rules */
.main-portfolio
{
    position: relative;
    margin-left: 2.5%;
    margin-right: 2.5%;
    width: 95%;
    min-width: 550px;
}

h1.portfolio
{
    text-align: center;
    margin-top: 0;
    color: var(--accent);
    /* TODO: add animation */
}

.header
{
    display: flex;
    flex-flow: column;
    width: 100vw;
    height: 33vh;
    background-image: url(nikita-kachanovsky-OVbeSXRk_9E-unsplash.jpg);
    background-position: -54px 55%;
    background-size: cover;
    align-items: center;
    justify-content: flex-end;
    /* TODO: add inset shadow */
}

.header > .credit-badge
{
    align-self: flex-start;
    margin-top: 50px;
}

.big-element
{
    width: 100%;
    height: 66vh;
    display: flex;
    align-items: flex-end;
    justify-content: center;
}

.grid-element
{
    width: 30vw;
    height: 66vh;
    display: flex;
    align-items: flex-end;
    justify-content: space-evenly;
    padding: 3px;
}

#placeholder
{
    background-image: url();
}

.primary
{
    background: var(--accent);
    transition: 180ms background ease;
}

.primary:hover, .secondary:hover
{
    background: var(--light);
    transition: 180ms background ease;
}

.secondary
{
    background: var(--light);
    transition: 180ms background ease;
}

button
{
    display: inline-flex;
    align-items: center;
    justify-content: center;
    min-width: 95px;
    height: 2rem;
    border-radius: 3px;
    padding: 3px;
    font-weight: bold;
    border: none;
}

/* for 1440p screens and above*/
@media screen and (min-width: 2559px) {
    nav
    {
        width: 20rem;
        padding-top: 3vh;
    }
    nav > a {
        width: 20rem;
        font-size: 28pt;
        height: 62pt;
        margin-top: 10px;
        margin-bottom: 10px;
    }
    .main
    {
        position: relative;
        margin-left: auto;
        margin-right: auto;
        font-size: 26pt;
        padding-top: 3vh;
    }
    h1
    {
        font-size: 48pt;
        margin-top: 24pt;
        margin-bottom: 24pt;
    }

    h2
    {
        font-size: 42pt;
        margin-top: 12pt;
        margin-bottom: 12pt;
    }

    h3
    {
        margin-top: 6pt;
        margin-bottom: 6pt;
    }
    .icon
    {
        height: 48pt;
        width: auto;
    }
}

/*for mobile*/
@media screen and (max-width: 768px) {
    nav
    {
        display: none;
        position: fixed;
        width: 100%;
        height: 70px;
        padding-top: 0;
        background: var(--rgba-primary-4);
        opacity: 1;
    }

    nav > a 
    {
        display: none;
    }
    
    html
    {
        overflow-x: hidden;
    }

    body
    {
        position: relative;
        overflow-x: hidden;
        width: 100%;
        margin: 0;
        padding: 0;
    }

    body > *
    {
        max-width: 100%;
    }

    #folder
    {
        display: unset;
    }    

    #about
    {
        text-align: center;
        max-width: 97vw;
    }

    #social
    {
        margin: 0;
        align-items: center;
        justify-content: center;
    }

    .icon
    {
        height: 54px;
        width: 54px;
        margin-left: 10px;
        margin-right: 10px;
        padding: 5px;
        box-shadow: 0 1px 4px 0px gray;
        border-radius: 50%;
        transform: none;
    }

    .main
    {
        left: 0;
        width: 97vw;
        margin-left: 1.5vw;
        margin-right: 1.5vw;
        margin-top: 130px;
        position: relative;
        transform: translateX(0);
    }

    section > *:not(:first-child)
    {
        margin-left: unset;
        margin-bottom: unset;
    }

    .educ-card
    {
        width: 95vw;
        margin: 12px 2.5vw 12px 2.5vw;
        padding: 5px;
        background: var(--dark);
        border-radius: 3px;    
    }

    .year
    {
        display: none;
    }

    #skillset-container
    {
        width: 80vw;
        margin-left: 10vw;
        margin-right: 10vw;
        grid-template-columns: auto;
    }

    h1
    {
        font-size: 24pt;
    }

    h2
    {
        font-size: 21pt;
    }

    #toPortfolio-mask
    {
        display: relative;
        position: absolute;
        top: -1px;
        background: var(--rgba-secondary-1-0);
        height: 117px;
        width: 100%;
        clip-path: polygon(-10% 0, 50% 100%, 110% 0);
        z-index: 1;
        padding-top: 35px;
    }

    #toPortfolio-mask > a
    {
        display: flex;
        align-items: center;
        justify-content: space-evenly;
        flex-flow: column;
        text-decoration: underline;
        font-size: 9pt;
    }

    #toPortfolio-mask > a > *
    {
        margin-bottom: 3px;
    }

    #toPortfolio-mask > a > #folder
    {
        height: 35px;
        width: 35px;
    }

    .up
    {
        transform: rotate(180deg);
    }

    #toPortfolio-shadow
    {
        position: absolute;
        top: -1px;
        background: gray;
        height: 119px;
        width: calc(100% + 1px);
        clip-path: polygon(-11% 0, 50% 100%, 111% 0);
        z-index: 0;
        filter: blur(5px);
    }

    input, label, textarea
    {
        width: 95vw;
    }

    .footer
    {
        font-size: 8pt;
    }

    hr
    {
        width: 30%;
    }
}

